cmake_minimum_required(VERSION 3.0.0)
set(CMAKE_C_COMPILER /home/slenderchat/x-tools/${CROSS_PREFIX}/bin/${CROSS_PREFIX}-gcc)
set(CMAKE_CXX_COMPILER /home/slenderchat/x-tools/${CROSS_PREFIX}/bin/${CROSS_PREFIX}-g++)
project(WBRecode)
set(CMAKE_C_FLAGS "-mtune=intel -Wall -Wextra")
set(CMAKE_CXX_FLAGS "${CMAKE_C_FLAGS}")
set(CMAKE_C_FLAGS_DEBUG "-Og -ggdb")
set(CMAKE_C_FLAGS_RELEASE "-Os -s")
set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_C_FLAGS_DEBUG}")
set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_C_FLAGS_RELEASE}")
set(ARCH x86_64)
set(TARGET_OS linux)
set(GIT_PULL git pull --recurse-submodules -j $$(nproc))
set(SCRIPTS_HOME "${CMAKE_SOURCE_DIR}/scripts")
set(DEPS "${CMAKE_SOURCE_DIR}/deps")
set(FFMPEG_HOME "${DEPS}/ffmpeg")
set(X264_HOME "${DEPS}/x264")
set(BOOST_HOME "${DEPS}/boost")
set(X264 "${X264_HOME}/libx264.a")
set(AVFORMAT "${FFMPEG_HOME}/libavformat/libavformat.a")
set(AVCODEC "${FFMPEG_HOME}/libavcodec/libavcodec.a")
set(AVUTIL "${FFMPEG_HOME}/libavutil/libavutil.a")
set(SWRESAMPLE "${FFMPEG_HOME}/libswresample/libswresample.a")
set(BOOST_FILESYSTEM "${BOOST_HOME}/stage/lib/libboost_filesystem.a")
set(BOOST_REGEX "${BOOST_HOME}/stage/lib/libboost_regex.a")
set(BOOST_SMB libs/container_hash libs/functional libs/integer libs/io libs/static_assert libs/preprocessor libs/mpl libs/smart_ptr libs/iterator libs/core libs/throw_exception libs/type_traits libs/assert libs/detail libs/system libs/predef libs/headers tools/boost_install libs/config libs/filesystem libs/regex tools/build)
set(X264_OPTS --disable-cli --enable-static --enable-strip --cross-prefix=${CROSS_PREFIX}-)
set(BOOST_OPTS --with-filesystem --with-regex toolset=gcc-my variant=release link=static threading=multi runtime-link=static)
set(FFMPEG_OPTS --enable-gpl --enable-small --disable-all --enable-avcodec --enable-avformat --enable-swresample --enable-encoder=libx264 --enable-decoder=h264 --enable-muxer=mp4 --enable-demuxer=mov,mp4,m4a,3gp,3g2,mj2,concat --enable-bsf=h264_mp4toannexb --enable-protocol=file,ftp --enable-libx264 --arch=${ARCH} --cpu=${ARCH} --cross-prefix='${CROSS_PREFIX}-' --enable-cross-compile --target-os=linux --extra-cflags='-I ${X264_HOME}' --extra-ldflags='-L ${X264_HOME}' --disable-debug)
file(MAKE_DIRECTORY "${DEPS}")
file(GENERATE OUTPUT "${BOOST_HOME}/tools/build/src/user-config.jam" CONTENT "using gcc : my : ${CROSS_PREFIX}-g++ ;")
include_directories("${FFMPEG_HOME}")
include_directories("${BOOST_HOME}")
add_custom_command(OUTPUT "${X264_HOME}/config.h" COMMAND ./configure ${X264_OPTS} DEPENDS "${X264_HOME}/.git/FETCH_HEAD" WORKING_DIRECTORY "${X264_HOME}")
add_custom_command(OUTPUT "${X264}" COMMAND make clean COMMAND make -j4 DEPENDS "${X264_HOME}/config.h" WORKING_DIRECTORY "${X264_HOME}")
add_custom_command(OUTPUT "${X264_HOME}/.git/FETCH_HEAD" COMMAND "${SCRIPTS_HOME}/cloneOrPull.sh" "${X264_HOME}" https://code.videolan.org/videolan/x264.git stable WORKING_DIRECTORY "${DEPS}")
add_custom_target(libx264-download COMMAND ${GIT_PULL} DEPENDS "${X264_HOME}/.git/FETCH_HEAD" WORKING_DIRECTORY "${X264_HOME}")
add_custom_target(libx264-config DEPENDS "${X264_HOME}/config.h" "${X264_HOME}/.git/FETCH_HEAD")
add_custom_target(libx264 DEPENDS "${X264}" "${X264_HOME}/.git/FETCH_HEAD")
add_custom_command(OUTPUT "${FFMPEG_HOME}/config.h" COMMAND ./configure ${FFMPEG_OPTS} DEPENDS "${FFMPEG_HOME}/.git/FETCH_HEAD" "${X264}" WORKING_DIRECTORY "${FFMPEG_HOME}")
add_custom_command(OUTPUT "${AVUTIL}" "${AVFORMAT}" "${AVCODEC}" "${SWRESAMPLE}" COMMAND make clean COMMAND make -j4 DEPENDS "${FFMPEG_HOME}/config.h" WORKING_DIRECTORY "${FFMPEG_HOME}")
add_custom_command(OUTPUT "${FFMPEG_HOME}/.git/FETCH_HEAD" COMMAND "${SCRIPTS_HOME}/cloneOrPull.sh" "${FFMPEG_HOME}" https://git.ffmpeg.org/ffmpeg.git WORKING_DIRECTORY "${DEPS}")
add_custom_target(libav-download COMMAND ${GIT_PULL} DEPENDS "${FFMPEG_HOME}/.git/FETCH_HEAD" WORKING_DIRECTORY "${FFMPEG_HOME}") 
add_custom_target(libav-config DEPENDS "${FFMPEG_HOME}/config.h" "${FFMPEG_HOME}/.git/FETCH_HEAD")
add_custom_target(libav-libs DEPENDS "${AVUTIL}" "${AVFORMAT}" "${AVCODEC}" "${SWRESAMPLE}" "${FFMPEG_HOME}/.git/FETCH_HEAD")
add_custom_command(OUTPUT "${BOOST_HOME}/b2" "${BOOST_HOME}/bootstrap.log" "${BOOST_HOME}/project-config.jam" COMMAND ./bootstrap.sh DEPENDS "${BOOST_HOME}/.git/FETCH_HEAD" WORKING_DIRECTORY "${BOOST_HOME}")
add_custom_command(OUTPUT "${BOOST_FILESYSTEM}" "${BOOST_REGEX}" COMMAND ./b2 --clean COMMAND ./b2 -j4 ${BOOST_OPTS} DEPENDS "${BOOST_HOME}/b2" "${BOOST_HOME}/bootstrap.log" "${BOOST_HOME}/project-config.jam" WORKING_DIRECTORY "${BOOST_HOME}")
add_custom_command(OUTPUT "${BOOST_HOME}/.git/FETCH_HEAD" COMMAND "${SCRIPTS_HOME}/cloneOrPull.sh" "${BOOST_HOME}" https://github.com/boostorg/boost.git master ${BOOST_SMB} WORKING_DIRECTORY "${DEPS}")
add_custom_target(boost-download COMMAND ${GIT_PULL} DEPENDS "${BOOST_HOME}/.git/FETCH_HEAD" WORKING_DIRECTORY "${BOOST_HOME}")
add_custom_target(boost-config DEPENDS "${BOOST_HOME}/b2" "${BOOST_HOME}/bootstrap.log" "${BOOST_HOME}/project-config.jam" "${BOOST_HOME}/.git/FETCH_HEAD")
add_custom_target(boost DEPENDS "${BOOST_FILESYSTEM}" "${BOOST_REGEX}" "${BOOST_HOME}/.git/FETCH_HEAD")
add_executable(WBRecode WBRecode.cpp WBRecode.hpp WBRecode.c WBRecode.h)
add_dependencies(WBRecode libav-libs boost boost-download libav-download libx264-download)
target_link_libraries(WBRecode -static "${AVFORMAT}" "${AVCODEC}" "${SWRESAMPLE}" "${AVUTIL}" "${X264}" "${BOOST_FILESYSTEM}" "${BOOST_REGEX}" dl z)
